# imagecli

./: .gitignore  Cargo.toml  DECISIONS.md  README.md  REQUIREMENTS.md  SKILL.md  TEST-LOG.md  即梦CLI体验指南_全文记录.md
.github/workflows/: ci.yml
examples/: 01_text2image.sh  02_image2image.sh  03_text2video.sh  04_upscale.sh  05_batch_and_budget.sh  06_fallback.sh  07_model_select.sh  08_mcp.sh  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: atomic.rs  keys.rs  mod.rs  settings.rs
src/core/: catalog.rs  download.rs  mod.rs  pricing.rs  provider.rs  registry.rs  retry.rs  route.rs  runner.rs  store.rs
src/mcp/: mod.rs
src/providers/: agnes.rs  fal.rs  google.rs  jimeng.rs  kling.rs  mod.rs  openai.rs  openai_compat.rs  ppio.rs  replicate.rs  seedance.rs  siliconflow.rs  stepfun.rs  volcengine.rs  zhipu.rs
src/transport/: async_task.rs  http_queue.rs  http_sync.rs  mod.rs  subprocess.rs
tests/: budget.rs  cross_process.rs  exit_code.rs  mcp.rs
